# serializer version: 1
# name: test_GRLIR_bsr_grl_base
  SRModelDescriptor(
    architecture='GRLIR',
    input_channels=3,
    output_channels=3,
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'base',
      '180dim',
      'w16df4',
      's32x64',
    ]),
  )
# ---
# name: test_GRLIR_sr_grl_tiny_c3x3
  SRModelDescriptor(
    architecture='GRLIR',
    input_channels=3,
    output_channels=3,
    scale=3,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'tiny',
      '64dim',
      'w32df4',
      's64x64',
    ]),
  )
# ---
# name: test_GRLIR_sr_grl_tiny_c3x4
  SRModelDescriptor(
    architecture='GRLIR',
    input_channels=3,
    output_channels=3,
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'tiny',
      '64dim',
      'w32df4',
      's64x64',
    ]),
  )
# ---
